{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 34,
  "lineage": "18796972-facb-11db-3a62-99bc4f845a8f",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307218864628:security-group/sg-05403383d8b104671",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05403383d8b104671",
            "ingress": [],
            "name": "devops-lab-prod-cluster-sg",
            "name_prefix": "",
            "owner_id": "307218864628",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "Name": "devops-lab-prod-cluster-sg"
            },
            "tags_all": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "devops-lab-prod-cluster-sg",
              "Project": "devops-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-02322ea89c4e6089c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d421770afacf7482",
            "arn": "arn:aws:ec2:us-east-1:307218864628:elastic-ip/eipalloc-0d421770afacf7482",
            "association_id": "eipassoc-0327224d8ecc54a2e",
            "domain": "vpc",
            "id": "eipalloc-0d421770afacf7482",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fe062cb88c7c1cf3",
            "private_dns": "ip-10-0-0-158.ec2.internal",
            "private_ip": "10.0.0.158",
            "public_dns": "ec2-35-175-39-89.compute-1.amazonaws.com",
            "public_ip": "35.175.39.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "Name": "devops-lab-prod-nat-eip"
            },
            "tags_all": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "devops-lab-prod-nat-eip",
              "Project": "devops-lab"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307218864628:internet-gateway/igw-022f107111c8b89f7",
            "id": "igw-022f107111c8b89f7",
            "owner_id": "307218864628",
            "tags": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "Name": "devops-lab-prod-igw"
            },
            "tags_all": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "devops-lab-prod-igw",
              "Project": "devops-lab"
            },
            "vpc_id": "vpc-02322ea89c4e6089c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d421770afacf7482",
            "association_id": "eipassoc-0327224d8ecc54a2e",
            "connectivity_type": "public",
            "id": "nat-0f44cfefd766ae012",
            "network_interface_id": "eni-0fe062cb88c7c1cf3",
            "private_ip": "10.0.0.158",
            "public_ip": "35.175.39.89",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-071453cb771fad6da",
            "tags": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "Name": "devops-lab-prod-nat"
            },
            "tags_all": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "devops-lab-prod-nat",
              "Project": "devops-lab"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307218864628:route-table/rtb-08e9e75c3e0954ebb",
            "id": "rtb-08e9e75c3e0954ebb",
            "owner_id": "307218864628",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f44cfefd766ae012",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "Name": "devops-lab-prod-private-rt"
            },
            "tags_all": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "devops-lab-prod-private-rt",
              "Project": "devops-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-02322ea89c4e6089c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307218864628:route-table/rtb-06f35ba9628324f73",
            "id": "rtb-06f35ba9628324f73",
            "owner_id": "307218864628",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022f107111c8b89f7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "Name": "devops-lab-prod-public-rt"
            },
            "tags_all": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "devops-lab-prod-public-rt",
              "Project": "devops-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-02322ea89c4e6089c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085bf88d3175d4adf",
            "route_table_id": "rtb-08e9e75c3e0954ebb",
            "subnet_id": "subnet-00a8ce9529ac88df8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef985d5012a00d26",
            "route_table_id": "rtb-08e9e75c3e0954ebb",
            "subnet_id": "subnet-0cab08dbc45abc2e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c1e6f1b98150509",
            "route_table_id": "rtb-06f35ba9628324f73",
            "subnet_id": "subnet-071453cb771fad6da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c47a7df1c8cc808",
            "route_table_id": "rtb-06f35ba9628324f73",
            "subnet_id": "subnet-07652dd0f144c9fbc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307218864628:subnet/subnet-00a8ce9529ac88df8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a8ce9529ac88df8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307218864628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "Name": "devops-lab-prod-private-us-east-1a",
              "kubernetes.io/cluster/devops-lab-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "devops-lab-prod-private-us-east-1a",
              "Project": "devops-lab",
              "kubernetes.io/cluster/devops-lab-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02322ea89c4e6089c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307218864628:subnet/subnet-0cab08dbc45abc2e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cab08dbc45abc2e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307218864628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "Name": "devops-lab-prod-private-us-east-1b",
              "kubernetes.io/cluster/devops-lab-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "devops-lab-prod-private-us-east-1b",
              "Project": "devops-lab",
              "kubernetes.io/cluster/devops-lab-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02322ea89c4e6089c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307218864628:subnet/subnet-071453cb771fad6da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071453cb771fad6da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307218864628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "Name": "devops-lab-prod-public-us-east-1a",
              "kubernetes.io/cluster/devops-lab-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "devops-lab-prod-public-us-east-1a",
              "Project": "devops-lab",
              "kubernetes.io/cluster/devops-lab-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02322ea89c4e6089c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307218864628:subnet/subnet-07652dd0f144c9fbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07652dd0f144c9fbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307218864628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "Name": "devops-lab-prod-public-us-east-1b",
              "kubernetes.io/cluster/devops-lab-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "devops-lab-prod-public-us-east-1b",
              "Project": "devops-lab",
              "kubernetes.io/cluster/devops-lab-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02322ea89c4e6089c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307218864628:vpc/vpc-02322ea89c4e6089c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b0cfb419da468609",
            "default_route_table_id": "rtb-0b8048fcc372a5f57",
            "default_security_group_id": "sg-07c0c580accfa2677",
            "dhcp_options_id": "dopt-0b25efb94e511914c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02322ea89c4e6089c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b8048fcc372a5f57",
            "owner_id": "307218864628",
            "tags": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "Name": "devops-lab-prod-vpc"
            },
            "tags_all": {
              "Cluster": "devops-lab-prod",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "devops-lab-prod-vpc",
              "Project": "devops-lab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}